--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 .hidden {
   display: none;
 }
+#mapWrapper {
+  position: relative;
+  width: 500px;
+  height: 500px;
+}
+
+#map {
+  display: block;
+}
+
+.dot {
+  position: absolute;
+  pointer-events: none;
+}
